--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>Recept szerkesztő</title>
+    <title>Recept szerkesztő {{#if loggedIn}}
+    -
+    {{user.username}}
+    {{/if}}</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/lib/bootswatch/sandstone/bootstrap.min.css">
@@ -20,12 +23,19 @@
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
+                        <span class="sr-only">Kattintson a navigációhoz</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand" href="#">Recept szerkesztő</a>
+                      <a class="navbar-brand" href="#">
+                        {{#if loggedIn}}
+                          {{#if user.avatar }}
+                          <img style="border:none; position: relative; top:-10px; width:40px; height:40px; float:left;" src="{{user.avatar}}" alt="avatar"></img>
+                          {{/if}}
+                          <span style="color:green; font-style:italic;">{{user.username}}</span>
+                        - {{/if}} Recept szerkesztő
+                        </a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,8 +56,19 @@
                           </ul>
                         </li>
                       </ul> -->
+
                       <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login/signin">Bejelentkezés</a></li>
+                        {{#if loggedIn}}
+                        <li><a href="/">Receptek</a></li>    
+                        <li><a href="/recipes/list">Receptjeim</a></li>                        
+                      <li><a href="/recipes/new">Új recept</a></li>    
+                        <li><a href="/user/edit">Adataim</a></li>
+                        <li><a href="/user/logout">Kilépés</a></li>
+                        
+                        {{else}}
+                        <li><a href="/user/signin">Bejelentkezés</a></li>
+                        {{/if}}
+                        
                         <li><a href="/about#">Súgó</a></li>
                       </ul>
                     </div><!-- /.navbar-collapse -->
