--- a/views/login/edit.hbs
+++ b/views/login/edit.hbs
@@ -1,8 +1,8 @@
 <div class="page-header">
-    <h1>Felhasználó adataid</h1>
+    <h1>{{user.username}} adatai</h1>
 </div>
-{{#each errorMessages}}
-<div class="alert alert-dismissible alert-danger">
+{{#each messages}}
+<div class="alert alert-dismissible alert-info">
     <button type="button" class="close" data-dismiss="alert">×</button>
     {{this}}
 </div>
@@ -12,31 +12,34 @@
         <div class="form-group">
             <label for="surname" class="col-lg-2 control-label">Vezetéknév</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="surname" name="surname" value="{{sn}}">
+            {{#if validationErrors.surname}}
+                has-error
+            {{/if}}
+                <input class="form-control" type="text" id="surname" name="surname" value="{{user.surname}}">
             </div>
         </div>
         <div class="form-group">
             <label for="forename" class="col-lg-2 control-label">Keresztnév</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="forename" name="forename" value="{{cn}}" >
+            {{#if validationErrors.forename}}
+                has-error
+            {{/if}}
+                <input class="form-control" type="text" id="forename" name="forename" value="{{user.forename}}" >
             </div>
         </div>
         <div class="form-group">
             <label for="email" class="col-lg-2 control-label">E-mail</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="email" name="email" value="{{email}}">
+            {{#if validationErrors.email}}
+                has-error
+            {{/if}}
+                <input class="form-control" type="text" id="email" name="email" value="{{user.email}}">
             </div>
         </div>
         <div class="form-group">
-        <label for="username" class="col-lg-2 control-label">Felhasználónév</label>
-            <div class="col-lg-10">
-                <input class="form-control" type="text" id="username" name="username"  value="{{un}}">
-            </div>
-        </div>        
-        <div class="form-group">
             <label for="avatar" class="col-lg-2 control-label">Avatar URL</label>
             <div class="col-lg-10">
-                <input class="form-control" type="text" id="avatar" name="avatar"  value="{{avatarurl}}">
+                <input class="form-control" type="text" id="avatar" name="avatar"  value="{{user.avatar}}">
             </div>
         </div>
         <div class="form-group">
