--- a/views/login/signin.hbs
+++ b/views/login/signin.hbs
@@ -1,7 +1,12 @@
 <div class="page-header">
     <h1>Bejelentkezés</h1>
 </div>
-
+{{#each messages}}
+<div class="alert alert-dismissible alert-info">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    {{this}}
+</div>
+{{/each}}
 <form class="form-horizontal" method="post">
     <fieldset>
         <div class="form-group">
@@ -26,7 +31,7 @@
 </form>
 
 <div class="list-group">
-  <a href="/login/signup" class="list-group-item">
+  <a href="/user/signup" class="list-group-item">
     Regisztráció
   </a>
 </div>
