--- a/views/login/signup.hbs
+++ b/views/login/signup.hbs
@@ -1,8 +1,8 @@
 <div class="page-header">
     <h1>Regisztráció</h1>
 </div>
-{{#each errorMessages}}
-<div class="alert alert-dismissible alert-danger">
+{{#each messages}}
+<div class="alert alert-dismissible alert-info">
     <button type="button" class="close" data-dismiss="alert">×</button>
     {{this}}
 </div>
