--- a/views/recipe/list.hbs
+++ b/views/recipe/list.hbs
@@ -1,5 +1,5 @@
 {{#each messages}}
-<div class="alert alert-dismissible alert-success">
+<div class="alert alert-dismissible alert-info">
     <button type="button" class="close" data-dismiss="alert">×</button>
     {{this}}
 </div>
@@ -14,9 +14,9 @@
     <li class="list-group-item">
         <div style="float:right; height:100px; width:100px">
        <img style="float:right;   height: 100%;
-   width: 100%;" src="{{rcpimgurl}}" /></div>
-       <h2> {{rcpname}} </h2>
-       <p> {{rcpdesc}} </p>
+   width: 100%;" src="{{headimg}}" /></div>
+       <h2> {{name}} </h2>
+       <p> {{description}} </p>
     </li>
     {{/each}}
 </ul>
