--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
+<link rel="shortcut icon" type="image/x-icon" href="restaurant26.png" />
     <title>Recept szerkesztő {{#if loggedIn}}
     -
     {{user.username}}
@@ -61,8 +61,11 @@
                         {{#if loggedIn}}
                         <li><a href="/">Receptek</a></li>    
                         <li><a href="/recipes/list">Receptjeim</a></li>                        
-                      <li><a href="/recipes/new">Új recept</a></li>    
+                        <li><a href="/recipes/new">Új recept</a></li>    
                         <li><a href="/user/edit">Adataim</a></li>
+                        {{#if isOperator}}
+                        <li><a href="/user/list">Felhasználók</a></li>                        
+                        {{/if}}
                         <li><a href="/user/logout">Kilépés</a></li>
                         
                         {{else}}
