--- a/views/login/edit.hbs
+++ b/views/login/edit.hbs
@@ -9,31 +9,31 @@
 {{/each}}
 <form class="form-horizontal" method="post">
     <fieldset>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.surname}}has-error{{/if}}">
             <label for="surname" class="col-lg-2 control-label">Vezetéknév</label>
             <div class="col-lg-10">
+            <input class="form-control" type="text" id="surname" name="surname" value="{{user.surname}}">
             {{#if validationErrors.surname}}
-                has-error
+            <span class="help-block">{{validationErrors.surname.msg}}</span>
             {{/if}}
-                <input class="form-control" type="text" id="surname" name="surname" value="{{user.surname}}">
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.forename}}has-error{{/if}}">
             <label for="forename" class="col-lg-2 control-label">Keresztnév</label>
             <div class="col-lg-10">
-            {{#if validationErrors.forename}}
-                has-error
-            {{/if}}
-                <input class="form-control" type="text" id="forename" name="forename" value="{{user.forename}}" >
+            <input class="form-control" type="text" id="forename" name="forename" value="{{user.forename}}" >
+                {{#if validationErrors.forename}}
+                    <span class="help-block">{{validationErrors.forename.msg}}</span>
+                {{/if}}
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.email}}has-error{{/if}}">
             <label for="email" class="col-lg-2 control-label">E-mail</label>
             <div class="col-lg-10">
-            {{#if validationErrors.email}}
-                has-error
-            {{/if}}
                 <input class="form-control" type="text" id="email" name="email" value="{{user.email}}">
+            {{#if validationErrors.email}}
+                    <span class="help-block">{{validationErrors.email.msg}}</span>
+            {{/if}}
             </div>
         </div>
         <div class="form-group">
