--- a/views/login/signup.hbs
+++ b/views/login/signup.hbs
@@ -9,34 +9,49 @@
 {{/each}}
 <form class="form-horizontal" method="post">
     <fieldset>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.surname}}has-error{{/if}}">
             <label for="surname" class="col-lg-2 control-label">Vezetéknév</label>
             <div class="col-lg-10">
                 <input class="form-control" type="text" id="surname" name="surname">
+                {{#if validationErrors.surname}}
+                    <span class="help-block">{{validationErrors.surname.msg}}</span>
+                {{/if}}
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.forename}}has-error{{/if}}">
             <label for="forename" class="col-lg-2 control-label">Keresztnév</label>
             <div class="col-lg-10">
                 <input class="form-control" type="text" id="forename" name="forename">
+                {{#if validationErrors.forename}}
+                    <span class="help-block">{{validationErrors.forename.msg}}</span>
+                {{/if}}
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.email}}has-error{{/if}}">
             <label for="email" class="col-lg-2 control-label">E-mail</label>
             <div class="col-lg-10">
                 <input class="form-control" type="text" id="email" name="email">
+                {{#if validationErrors.email}}
+                    <span class="help-block">{{validationErrors.email.msg}}</span>
+                {{/if}}
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.username}}has-error{{/if}}">
         <label for="username" class="col-lg-2 control-label">Felhasználónév</label>
             <div class="col-lg-10">
                 <input class="form-control" type="text" id="username" name="username">
+                {{#if validationErrors.username}}
+                    <span class="help-block">{{validationErrors.username.msg}}</span>
+                {{/if}}
             </div>
         </div>        
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.password}}has-error{{/if}}">
             <label for="password" class="col-lg-2 control-label">Jelszó</label>
             <div class="col-lg-10">
                 <input class="form-control" type="password" id="password" name="password">
+                {{#if validationErrors.password}}
+                    <span class="help-block">{{validationErrors.password.msg}}</span>
+                {{/if}}
             </div>
         </div>
         <div class="form-group">
