--- a/views/recipe/new.hbs
+++ b/views/recipe/new.hbs
@@ -9,10 +9,13 @@
 {{/each}}
 <form class="form-horizontal" method="post">
     <fieldset>
-        <div class="form-group">
+        <div class="form-group {{#if validationErrors.name}}has-error{{/if}}">
             <label for="name" class="col-lg-2 control-label">Név</label>
             <div class="col-lg-10">
                 <input class="form-control" type="text" id="name" name="name" >
+                {{#if validationErrors.name}}
+                    <span class="help-block">{{validationErrors.name.msg}}</span>
+                {{/if}}
             </div>
         </div>
         <div class="form-group">
@@ -21,10 +24,13 @@
                 <input class="form-control" type="text" id="headimg" name="headimg"  >
             </div>
         </div>
-        <div class="form-group">
-        <label for="desc" class="col-lg-2 control-label">Leírás</label>
+        <div class="form-group  {{#if validationErrors.description}}has-error{{/if}}">
+        <label for="description" class="col-lg-2 control-label">Leírás</label>
             <div class="col-lg-10">
-                <textarea class="form-control" id="desc" name="desc"  ></textarea>
+                <textarea style="height:200px;" class="form-control" id="description" name="description"  ></textarea>
+                {{#if validationErrors.description}}
+                    <span class="help-block">{{validationErrors.description.msg}}</span>
+                {{/if}}
             </div>
         </div>        
         <div class="form-group">
