--- a/views/login/signin.hbs
+++ b/views/login/signin.hbs
@@ -1,12 +1,13 @@
 <div class="page-header">
     <h1>Bejelentkezés</h1>
 </div>
-{{#each messages}}
+
+{{#if messages}}
 <div class="alert alert-dismissible alert-info">
     <button type="button" class="close" data-dismiss="alert">×</button>
-    {{this}}
+    {{messages}}
 </div>
-{{/each}}
+{{/if}}
 <form class="form-horizontal" method="post">
     <fieldset>
         <div class="form-group">
