--- a/views/login/signup.hbs
+++ b/views/login/signup.hbs
@@ -64,7 +64,7 @@
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
                 <button type="reset" class="btn btn-default">Visszaállítás</button>
-                <button type="submit" class="btn btn-primary">Küldés</button>
+                <button id="btnSubmit" type="submit" class="btn btn-primary">Küldés</button>
             </div>
         </div>
     </fieldset>
