--- a/views/recipe/list.hbs
+++ b/views/recipe/list.hbs
@@ -23,4 +23,4 @@
     {{/each}}
 </ul>
 
-<p><a href="/recipes/new" class="btn btn-default">Új recept felvétele</a></p>
+<p><a id="btnNewRecipe" href="/recipes/new" class="btn btn-default">Új recept felvétele</a></p>
